# serializer version: 1
# name: TestCategoricalOutputs.test_rf_regressor_arf_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.36231 |    0.00299 |   -0.16632 |     0.02213 |     -0.2664  |   -0.07446 |   -0.21242 |    -0.00734 |         -0.36231 |      -0.00477 |       -0.07285 |
      |  2 |            2 | 2.20594 | -0.35176 |    0.21779 |   -0.33603 |    -0.10107 |     -0.20214 |    0.11996 |   -0.18711 |    -0.05117 |         -0.35176 |       0.0767  |       -0.04216 |
      |  3 |            3 | 2.20594 | -0.29834 |    0.23658 |   -0.87792 |     0.59291 |     -0.69573 |    1.02629 |   -0.19643 |    -0.15363 |         -0.29834 |       1.57257 |        1.11513 |
      |  4 |            4 | 2.20594 |  0.07028 |    0.13482 |    0.21377 |     0.10103 |      0.09261 |   -0.21804 |    0.06507 |    -0.00103 |          0.07028 |      -0.04424 |       -0.02182 |
      |  5 |            5 | 2.20594 | -0.04908 |   -0.13529 |    0.1723  |     0.07487 |      0.19342 |    0.23389 |    0.03381 |     0.01073 |         -0.04908 |      -0.28172 |       -0.1305  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.04553 |    0.06324 |    0.072   |     0.08746 |      0.0666  |    0.05776 |    0.06107 |     0.08166 |          0.04553 |       0.08577 |        0.06298 |
      |  2 |            2 |      0 |  0.04967 |    0.0755  |    0.08292 |     0.04053 |      0.08959 |    0.06387 |    0.08633 |     0.04873 |          0.04967 |       0.08312 |        0.0965  |
      |  3 |            3 |      0 |  0.25123 |    0.45487 |    0.39868 |     0.52751 |      0.38918 |    0.40214 |    0.37034 |     0.46273 |          0.25123 |       0.3726  |        0.55258 |
      |  4 |            4 |      0 |  0.02923 |    0.07196 |    0.05463 |     0.0264  |      0.03763 |    0.07306 |    0.04758 |     0.02184 |          0.02923 |       0.04415 |        0.05334 |
      |  5 |            5 |      0 |  0.04602 |    0.09968 |    0.08252 |     0.07898 |      0.06597 |    0.08746 |    0.0639  |     0.06765 |          0.04602 |       0.0651  |        0.08142 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.61248 |    0.04879 |   -0.20305 |     0.05959 |     -0.01983 |   -0.30896 |   -0.3183  |     0.20728 |         -0.27042 |      -0.05053 |       -0.03522 |
      |  2 |            2 | 2.20594 | -0.17775 |   -0.04833 |   -0.37423 |     0.00532 |      0.03792 |   -0.09993 |   -0.33886 |     0.15643 |         -0.34512 |       0.04954 |       -0.06671 |
      |  3 |            3 | 2.20594 |  0.05963 |    0.55566 |   -0.11366 |     0.03059 |      0.06252 |    0.9354  |    0.16418 |     0.07416 |          0.20878 |       0.02039 |        0.018   |
      |  4 |            4 | 2.20594 |  0.46231 |    0.06991 |    0.13374 |     0.00933 |     -0.15418 |   -0.15606 |    0.07526 |     0.06802 |          0.01623 |      -0.02258 |       -0.03693 |
      |  5 |            5 | 2.20594 |  0.25209 |    0.05935 |   -0.06038 |     0.11495 |      0.07309 |   -0.04687 |   -0.31811 |     0.15502 |         -0.04725 |      -0.07898 |       -0.04146 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.15574 |    0.05454 |    0.0797  |     0.14368 |      0.11963 |    0.11068 |    0.15782 |     0.17617 |          0.0679  |       0.12421 |        0.074   |
      |  2 |            2 |      0 |  0.09418 |    0.04668 |    0.05615 |     0.09273 |      0.08507 |    0.07676 |    0.12754 |     0.12323 |          0.0475  |       0.08617 |        0.05653 |
      |  3 |            3 |      0 |  0.18819 |    0.0634  |    0.07503 |     0.13337 |      0.13467 |    0.14768 |    0.18608 |     0.21563 |          0.08401 |       0.13232 |        0.06642 |
      |  4 |            4 |      0 |  0.14772 |    0.05941 |    0.08013 |     0.09048 |      0.14096 |    0.07979 |    0.14598 |     0.20654 |          0.05209 |       0.09172 |        0.05834 |
      |  5 |            5 |      0 |  0.11314 |    0.05866 |    0.07909 |     0.10141 |      0.11468 |    0.10407 |    0.22486 |     0.25212 |          0.05738 |       0.11545 |        0.07611 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -0.79677 |   -0.13991 |   -0.15336 |     -0.41307 |
      |  2 |            2 | 2.20594 |   -0.5158  |   -0.13083 |   -0.18083 |     -0.37426 |
      |  3 |            3 | 2.20594 |    0.52809 |    1.04504 |    0.08053 |      0.36199 |
      |  4 |            4 | 2.20594 |    0.61434 |   -0.09523 |    0.0739  |     -0.12795 |
      |  5 |            5 | 2.20594 |    0.05036 |    0.15168 |    1e-05   |     -0.1406  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |           -0 |
      |  5 |            5 |      0 |          0 |          0 |          0 |           -0 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.53741 |    0.08809 |    0.17954 |     0.08285 |     -0.21879 |   -0.23398 |   -0.24773 |    -0.06267 |         -0.53741 |      -0.10813 |        0.09158 |
      |  2 |            2 | 2.20594 | -0.39784 |    0.09606 |   -0.06547 |     0.01965 |     -0.23132 |   -0.03629 |   -0.15938 |    -0.02738 |         -0.39784 |      -0.01998 |        0.01102 |
      |  3 |            3 | 2.20594 |  0.03898 |    0.47993 |    0.0528  |     0.02785 |      0.28801 |    0.64054 |    0.27559 |     0.04982 |          0.03898 |       0.12401 |        0.00657 |
      |  4 |            4 | 2.20594 |  0.28661 |    0.01993 |   -0.0211  |     0.14853 |     -0.04934 |   -0.36831 |    0.13084 |     0.03773 |          0.28661 |       0.04074 |       -0.0495  |
      |  5 |            5 | 2.20594 |  0.00777 |    0.02683 |    0.06315 |     0.12703 |      0.05938 |   -0.13108 |   -0.08621 |    -0.02088 |          0.00777 |       0.02809 |       -0.00848 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.08168 |    0.12827 |    0.12045 |     0.08931 |      0.06957 |    0.12949 |    0.09227 |     0.06218 |          0.08168 |       0.13615 |        0.09915 |
      |  2 |            2 |      0 |  0.05519 |    0.0689  |    0.08147 |     0.07386 |      0.05313 |    0.06814 |    0.07118 |     0.05671 |          0.05519 |       0.08544 |        0.08011 |
      |  3 |            3 |      0 |  0.04697 |    0.09975 |    0.06382 |     0.07191 |      0.09566 |    0.07239 |    0.08317 |     0.07349 |          0.04697 |       0.04965 |        0.04635 |
      |  4 |            4 |      0 |  0.0541  |    0.08579 |    0.06809 |     0.04347 |      0.06875 |    0.08202 |    0.07493 |     0.05323 |          0.0541  |       0.07983 |        0.06551 |
      |  5 |            5 |      0 |  0.03302 |    0.06167 |    0.05989 |     0.12095 |      0.06832 |    0.06425 |    0.05193 |     0.08403 |          0.03302 |       0.04283 |        0.02811 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -1.32031 |   -0.27512 |    0.00976 |      0.08161 |
      |  2 |            2 | 2.20594 |   -1.18476 |   -0.16226 |   -0.02161 |      0.15986 |
      |  3 |            3 | 2.20594 |    1.01491 |    0.84109 |    0.10983 |      0.05725 |
      |  4 |            4 | 2.20594 |    0.41444 |   -0.2297  |    0.14668 |      0.13133 |
      |  5 |            5 | 2.20594 |   -0.03899 |    0.11437 |   -0.00338 |      0.00138 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |          0 |            0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |            0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |            0 |
      |  5 |            5 |      0 |         -0 |          0 |         -0 |            0 |
    ''',
  })
# ---
